// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RequestPasswordResetPage /> should NOT render RequestPasswordResetPage when user IS authenticated 1`] = `null`;

exports[`<RequestPasswordResetPage /> should render RequestPasswordResetPage when user IS NOT authenticated 1`] = `
<div
  className="request-password-reset-page"
>
  <div>
    <h1>
      <span>
        Let’s find your account
      </span>
    </h1>
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="email"
        >
          E-mail
        </label>
        <div
          className=""
        >
          <input
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="E-mail"
            type="email"
            value=""
          />
        </div>
      </div>
      <div>
        <button
          disabled={true}
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<RequestPasswordResetPage /> should render RequestPasswordResetPage with error message when errorMessage is in the props 1`] = `
<div
  className="request-password-reset-page"
>
  <div>
    <h1>
      <span>
        Let’s find your account
      </span>
    </h1>
    <p>
      <span>
        An error occurred during sending request password rest. Please try again.
      </span>
    </p>
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="email"
        >
          E-mail
        </label>
        <div
          className=""
        >
          <input
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="E-mail"
            type="email"
            value=""
          />
        </div>
      </div>
      <div>
        <button
          disabled={true}
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<RequestPasswordResetPage /> should render RequestPasswordResetPage with loading indicator when loading is in the props 1`] = `
<div
  className="request-password-reset-page"
>
  <div>
    <h1>
      <span>
        Let’s find your account
      </span>
    </h1>
    <div>
      Processing... Please wait.
    </div>
    <form
      noValidate={true}
      onSubmit={[Function]}
    >
      <div>
        <label
          htmlFor="email"
        >
          E-mail
        </label>
        <div
          className=""
        >
          <input
            id="email"
            name="email"
            onBlur={[Function]}
            onChange={[Function]}
            onDragStart={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            placeholder="E-mail"
            type="email"
            value=""
          />
        </div>
      </div>
      <div>
        <button
          disabled={true}
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`<RequestPasswordResetPage /> should render RequestPasswordResetPage with success message when sent request 1`] = `
<div
  className="request-password-reset-page"
>
  <div>
    <h1>
      <span>
        We just emailed you a link
      </span>
    </h1>
    <p>
      <span>
        Please check your email and click the secure link.
      </span>
    </p>
    <p>
      <span>
        If you don’t see our email, check your spam folder. Still having trouble? Get troubleshooting tips.
      </span>
    </p>
  </div>
</div>
`;
